--- a/Datawarehouse/src/lib/config.properties
+++ b/Datawarehouse/src/lib/config.properties
@@ -6,9 +6,9 @@ datawarehouse.url=jdbc:mysql://localhost:3306/GiaVang_DataWarehouse
 datawarehouse.username=root
 datawarehouse.password=
 
-datawarehouse.url=jdbc:mysql://localhost:3306/GiaVang_DataWarehouse
-datawarehouse.username=root
-datawarehouse.password=
+datamart.url=jdbc:mysql://localhost:3306/GiaVang_DataMart
+datamart.username=root
+datamart.password=
 
 control.url=jdbc:mysql://localhost:3306/GiaVang_Control
 control.username=root
