--- a/Datawarehouse/src/lib/config.properties
+++ b/Datawarehouse/src/lib/config.properties
@@ -1,15 +1,23 @@
-staging.url=jdbc:mysql://localhost:3306/GiaVang_Staging
+staging.database=GiaVang_Staging
 staging.username=root
 staging.password=
+staging.port=3306
+staging.host=localhost
 
-datawarehouse.url=jdbc:mysql://localhost:3306/GiaVang_DataWarehouse
+datawarehouse.database=GiaVang_DataWarehouse
 datawarehouse.username=root
 datawarehouse.password=
+datawarehouse.port=3306
+datawarehouse.host=localhost
 
-datamart.url=jdbc:mysql://localhost:3306/GiaVang_DataMart
+datamart.database=GiaVang_DataMart
 datamart.username=root
 datamart.password=
+datamart.port=3306
+datamart.host=localhost
 
-control.url=jdbc:mysql://localhost:3306/GiaVang_Control
+control.database=GiaVang_Control
 control.username=root
 control.password=
+control.port=3306
+control.host=localhost
